feat: fix allow sbt to work with java17 (add-opens), correct typo, add value to send test