@@ -32,3 +32,8 @@ lazy val root = (project in file("."))
       "-language:postfixOps",
     ),
   )
+
+Gatling / javaOptions := overrideDefaultJavaOptions(
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+)
